# microstructure-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: baseline_mm.json  momentum.json  twap.json
notebooks/: 01_baseline_mm_analysis.ipynb  02_execution_quality_analysis.ipynb  03_funding_basis_arb_analysis.ipynb  04_two_venue_latency_arb_analysis.ipynb
scripts/: export_results_charts.py  run_backtest.py
src/microstructure_lab/: __init__.py  order_book.py  types.py
src/microstructure_lab/analytics/: __init__.py  metrics.py
src/microstructure_lab/sim/: engine.py  scenario.py
src/microstructure_lab/strategies/: base.py  market_maker.py  momentum.py  passive.py  twap.py
tests/: conftest.py  test_behavioral.py  test_engine_guards.py  test_metrics.py  test_order_book.py  test_order_book_depth.py  test_sim_smoke.py
